bootstrap/vendor/github.com/google/go-jsonnet/cpp-jsonnet/test_suite/error.function_arg_positional_after_named.jsonnet.golden
RUNTIME ERROR: internal error: got positional param after named at index 1
	error.function_arg_positional_after_named.jsonnet:19:1-12	
