bootstrap/vendor/github.com/google/go-jsonnet/cpp-jsonnet/test_suite/error.import_static-check-failure.jsonnet
import 'lib/static_check_failure.jsonnet'
